# enka-py-assets

./: .gitignore  README.md  cook_jsons.py  pyproject.toml
.github/workflows/: main.yml
data/: artifacts.json  character_namecards.json  characters.json  consts.json  deobfuscations.json  talents.json  text_map.json  text_map_de.json  text_map_en.json  text_map_es.json  text_map_fr.json  text_map_id.json  text_map_it.json  text_map_ja.json  text_map_ko.json  text_map_pt.json  text_map_ru.json  text_map_th.json  text_map_tr.json  text_map_vi.json  text_map_zh-cn.json  text_map_zh-tw.json
data/hsr/: hsr.json  promotions.json  property_config.json  relic_set.json  skill.json  skill_tree.json
data/zzz/: deobfuscations.json  equipment_level.json  equipment_suits.json  namecards.json  titles.json  weapon_level.json  weapon_star.json
json_cooker/: base.py  utils.py
json_cooker/genshin/: cooker.py  data.py
json_cooker/hsr/: cooker.py  data.py
json_cooker/zzz/: cooker.py  data.py
