[tool.poetry]
name = "enka-py-assets"
version = "0.1.0"
description = "A repo that generates and stores the assets for enka.py"
authors = ["seriaati <seria.ati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.10"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
