[project]
name = "enka-py-assets"
version = "0.1.0"
description = "A repo that generates and stores the assets for enka.py"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiofiles>=24.1.0", "aiohttp>=3.11.3", "orjson>=3.10.11"]
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"